# AIS2.py

./: .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.rst  MANIFEST.in  README.rst  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-publish.yaml
AIS/: __init__.py  ais.py  exceptions.py  pdf.py  types.py
docs/: api.rst  conf.py  index.rst
tests/: common.py  test_ais.py  test_pdf.py
tests/cassettes/: sign_batch.json  sign_prepared_pdf.json  sign_unprepared_pdf.json  wrong_customer.json
