[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".git",
    ".*",
    "_*"
]

[tool.coverage.run]
branch = true
omit = ["*/types.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError"
]

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[[tool.mypy.overrides]]
module = ["pyhanko.*"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310,py311,py312,py313,pypy,lint,bandit,mypy

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311,lint,bandit,mypy
    3.12: py312
    3.13: py313

[testenv]
setenv =
    py{38,39,310,311,312,313}: COVERAGE_FILE = .coverage.{envname}
passenv = AIS_CUSTOMER,AIS_KEY_STATIC,AIS_CERT_FILE,AIS_CERT_KEY,AIS_SSL_CA
deps =
    pytest>=2.8.0
    vcrpy>=1.7.0
    pytest-cov
    pytest-codecov[git]
commands = py.test --cov={envsitepackagesdir}/AIS --cov-report= {posargs}

[testenv:lint]
basepython = python3.11
deps =
    flake8
commands = flake8 AIS/ tests/

[testenv:mypy]
basepython = python3.11
deps =
    mypy
    types-requests
commands = mypy -p AIS

[testenv:bandit]
basepython = python3.11
deps =
    bandit[toml]
commands = bandit -c pyproject.toml -r AIS/

[testenv:docs]
deps =
    sphinx>=1.4.0
    .
commands =
    sphinx-build -E -W -c docs -b html docs/ docs/_build/html

[testenv:report]
deps =
    coverage[toml]
skip_install = true
commands =
    coverage combine
    coverage report -m
"""