[metadata]
name = AIS2.py
version = attr: AIS.__version__
description = Python interface for the Swisscom All-in Signing Service
long_description = file: README.rst, HISTORY.rst
license = GNU Affero General Public License v3 or later (AGPLv3+)
author = Camptocamp
author_email = info@camptocamp.com
maintainer = Seantis GmbH
maintainer_email = info@seantis.ch
url = https://pypi.python.org/pypi/AIS2.py
project_urls =
    Bug Tracker = https://pypi.python.org/pypi/AIS2.py/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = True
packages =
    AIS
python_requires = >=3.7
install_requires =
    requests >=2.0
    pyHanko >=0.9.0

[options.package_data]
* =
    README.rst
    LICENSE
    HISTORY.rst
    py.typed

[bdist_wheel]
universal=1
